Add core functionality for support vertices computation and labeling, including file handling and distance calculations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # USE C++20 OR HIGHER
 # INCLUDE PROTOBUF HEADERS
 # LINK PROTOBUF LIBRARIES
-# COMPILE SOURCE DIRECTORY `.cpp` AND `.cc`
+# COMPILE `source/` DIRECTORY `.cpp` AND `.cc`
 # BUILD LABEL FROM `label.cpp`
 # BUILD TRAIN FROM `train.cpp`
+# BINARIES GO TO `bin/`
