Add protobuf definitions for clustering and labeling data structures
- Introduced ClusterID message to represent cluster identifiers using either integer or string.
- Created TrainingDataset and associated entries to hold feature data and cluster IDs for training.
- Added SupportVertices message to manage support vertex entries with features and cluster IDs.
- Defined VertexToLabelEntry and VerticesToLabel messages for labeling vertices with expected cluster IDs.
- Implemented LabeledVertexEntry and LabeledVertices for storing labeled vertex data.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
-# USE C++20 OR HIGHER
-# INCLUDE PROTOBUF HEADERS
-# LINK PROTOBUF LIBRARIES
-# COMPILE `source/` DIRECTORY `.cpp` AND `.cc`
-# BUILD LABEL FROM `label.cpp`
-# BUILD TRAIN FROM `train.cpp`
-# BINARIES GO TO `bin/`
+# Root CMakeLists.txt
+cmake_minimum_required(VERSION 3.20)
+project(nn-clas LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(Protobuf REQUIRED)
+
+# Include directories for project headers
+include_directories(include/nn-clas)
+
+# Add subdirectories
+add_subdirectory(src/common)
+add_subdirectory(src/proto)
+add_subdirectory(src/app)
