Implement code changes to enhance functionality and improve performance

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,18 +1,17 @@
-# src/app/CMakeLists.txt
-# Executable for label
-add_executable(label
-  label.cpp
-)
-
-target_link_libraries(label PRIVATE
-  common_lib
-)
-
-# Executable for train
+# Train executable
 add_executable(train
   train.cpp
 )
 
 target_link_libraries(train PRIVATE
+  common_lib
+)
+
+# Label executable
+add_executable(label
+  label.cpp
+)
+
+target_link_libraries(label PRIVATE
   common_lib
 )
