Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(common_lib STATIC
+  classifier.pb.cc
   computeSVs.cpp
   filenameHelpers.cpp
   filter.cpp
@@ -12,9 +13,9 @@ add_library(common_lib STATIC
 )
 
 target_include_directories(common_lib PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/nn-clas
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../include
 )
 
 target_link_libraries(common_lib PUBLIC
-  proto_lib
+  ${Protobuf_LIBRARIES}
 )
