Implement nearest support vector prediction functionality
- Added nearestSVpred.hpp header file to declare nearestSVLabel function.
- Implemented nearestSVLabel function in nearestSVpred.cpp to predict labels based on nearest support vectors.
- Created fit.cpp to read test and support samples, invoke nearestSVLabel, and write predicted samples to output.
- Developed pred.cpp to read dataset, compute Gabriel graph, filter samples, and write support vectors to output.
- Introduced run.py script for executing the prediction process.
- Updated project structure with new source files and scripts.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(common_lib STATIC
   filter.cpp
   gabrielGraph.cpp
   isgabrielEdge.cpp
-  nearestSVlabel.cpp
+  nearestSVpred.cpp
   readFiles.cpp
   squaredDistance.cpp
   types.cpp
