--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,17 +1,17 @@
-# Train executable
-add_executable(train
-  train.cpp
+# Fit executable
+add_executable(fit
+  fit.cpp
 )
 
-target_link_libraries(train PRIVATE
+target_link_libraries(fit PRIVATE
   common_lib
 )
 
 # Label executable
-add_executable(label
-  label.cpp
+add_executable(pred
+  pred.cpp
 )
 
-target_link_libraries(label PRIVATE
+target_link_libraries(pred PRIVATE
   common_lib
 )
