Refactor support vector functionality: replace computeSVs with computeSSs, update related files, and adjust paths in scripts

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_library(common_lib STATIC
   classifier.pb.cc
-  computeSVs.cpp
+  computeSSs.cpp
   filenameHelpers.cpp
   filter.cpp
   gabrielGraph.cpp
   isgabrielEdge.cpp
-  nearestSVpred.cpp
+  nearestSSpred.cpp
   readFiles.cpp
   squaredDistance.cpp
   types.cpp
