Add nn-fit and nn-pred executables for training and prediction
- Implemented nn-fit executable in fit.cpp for training samples processing.
- Implemented nn-pred executable in pred.cpp for predicting labels using support samples.
- Added necessary includes and function calls for reading datasets, computing Gabriel graphs, filtering samples, and writing output files.
- Defined command-line argument handling for both executables to ensure proper usage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,4 @@ find_package(Protobuf REQUIRED)
 
 # Add subdirectories
 add_subdirectory(src/common)
-add_subdirectory(src/app)
+add_subdirectory(src/nn-clas)
