Implement Bimap and k-NN classification functionality
- Added Bimap class for bidirectional mapping between integers and Targets.
- Implemented methods for inserting and retrieving values in Bimap.
- Created kNSSpred function for k-NN classification using a kernel-based approach.
- Developed helper functions for distance computation and sorting indices.
- Added fit and pred executables for training and prediction processes.
- Implemented file reading and writing functionalities for sample datasets.
- Updated CMakeLists.txt to include new executables and link necessary libraries.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_library(common_lib STATIC
+  bimap.cpp
   classifier.pb.cc
   computeSSs.cpp
   filenameHelpers.cpp
   filter.cpp
   gabrielGraph.cpp
   isgabrielEdge.cpp
+  kNSSpred.cpp
   nearestSSpred.cpp
   readFiles.cpp
   squaredDistance.cpp
