--- a/src/nn-clas/CMakeLists.txt
+++ b/src/nn-clas/CMakeLists.txt
@@ -1,17 +1,17 @@
 # Fit executable
-add_executable(nn-fit
+add_executable(knn-fit
   fit.cpp
 )
 
-target_link_libraries(nn-fit PRIVATE
+target_link_libraries(knn-fit PRIVATE
   common_lib
 )
 
 # Pred executable
-add_executable(nn-pred
+add_executable(knn-pred
   pred.cpp
 )
 
-target_link_libraries(nn-pred PRIVATE
+target_link_libraries(knn-pred PRIVATE
   common_lib
 )
