--- a/src/knn-clas/CMakeLists.txt
+++ b/src/knn-clas/CMakeLists.txt
@@ -1,17 +1,17 @@
 # Fit executable
-add_executable(nn-fit
-  fit.cpp
+add_executable(knn-fit
+  knn-fit.cpp
 )
 
-target_link_libraries(nn-fit PRIVATE
+target_link_libraries(knn-fit PRIVATE
   common_lib
 )
 
 # Pred executable
-add_executable(nn-pred
-  pred.cpp
+add_executable(knn-pred
+  knn-pred.cpp
 )
 
-target_link_libraries(nn-pred PRIVATE
+target_link_libraries(knn-pred PRIVATE
   common_lib
 )
