Update .gitignore, launch configurations, and improve k-NN prediction logic; add evaluate_real.py script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -90,7 +90,8 @@
     "args": [
       "${workspaceFolder}/data/spirals_test.pb",
       "${workspaceFolder}/data/spirals_knn_support.pb",
-      "${workspaceFolder}/data/spirals_knn_predicted.pb"
+      "${workspaceFolder}/data/spirals_knn_predicted.pb",
+      "200"
     ],
     "stopAtEntry": false,
     "cwd": "${workspaceFolder}/bin/",
