--- a/.gitignore
+++ b/.gitignore
@@ -528,5 +528,6 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 
-data/input
-data/output
+data/
+bin/
+scripts/pvenv/
