Refactor KNN and NN classification implementations: remove obsolete prediction files, update CMake configurations, and enhance dataset accuracy and statistics in reports.

--- a/src/knn-clas/CMakeLists.txt
+++ b/src/knn-clas/CMakeLists.txt
@@ -1,17 +1,18 @@
-# Fit executable
-add_executable(knn-fit
-  knn-fit.cpp
+# knn-specific library
+add_library(knn_clas_lib STATIC
+  kNSSpred.cpp
 )
 
-target_link_libraries(knn-fit PRIVATE
-  common_lib
+target_include_directories(knn_clas_lib PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../include
 )
+
+target_link_libraries(knn_clas_lib PRIVATE common_lib)
+
+# Fit executable
+add_executable(knn-fit knn-fit.cpp)
+target_link_libraries(knn-fit PRIVATE knn_clas_lib)
 
 # Pred executable
-add_executable(knn-pred
-  knn-pred.cpp
-)
-
-target_link_libraries(knn-pred PRIVATE
-  common_lib
-)
+add_executable(knn-pred knn-pred.cpp)
+target_link_libraries(knn-pred PRIVATE knn_clas_lib)
