Add likelihoods handling and refactor k-NN classification
- Introduced a new constructor for PredictedSample to initialize with likelihoods.
- Implemented writeLikelihoods function to serialize predicted samples with likelihoods to a file.
- Refactored getKNSSLikelihood to return PredictedSamples instead of LikelihoodsVec.
- Updated kNSSpred and kNSSvoting headers to include necessary dependencies.
- Created knn-like executable to read test and support samples, compute likelihoods, and write them to a file.
- Adjusted CMakeLists.txt to include new source files and update include paths.
- Cleaned up tree structure by organizing files related to likelihoods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ find_package(Protobuf REQUIRED)
 add_subdirectory(src/common)
 add_subdirectory(src/nn-clas)
 add_subdirectory(src/knn-clas)
+add_subdirectory(src/knn-clas/likelihoods)
